--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -15,7 +15,8 @@ on:
       - main
 
 jobs:
-  build:
+  job1:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -31,31 +32,44 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
+          
       - name: Test with Maven
         run: mvn test
         
-      - name: Cache SonarQube packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+#       - name: Cache SonarQube packages
+#         uses: actions/cache@v3
+#         with:
+#           path: ~/.sonar/cache
+#           key: ${{ runner.os }}-sonar
+#           restore-keys: ${{ runner.os }}-sonar
           
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+#       - name: Cache Maven packages
+#         uses: actions/cache@v3
+#         with:
+#           path: ~/.m2
+#           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#           restore-keys: ${{ runner.os }}-m2
           
-      - name: Analyse with SonarQube
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: >
-            mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.organization=hassanonsori
-            -Dsonar.projectKey=HassanOnsori_TimerStopwatch
-            -Dsonar.login=$SONAR_TOKEN
+#       - name: Analyse with SonarQube
+#         env:
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+#         run: >
+#             mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
+#             -Dsonar.organization=hassanonsori
+#             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
+#             -Dsonar.login=$SONAR_TOKEN
             
