--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -48,28 +48,28 @@ jobs:
           
       - name: Test with Maven
         run: mvn test
-        
-#       - name: Cache SonarQube packages
-#         uses: actions/cache@v3
-#         with:
-#           path: ~/.sonar/cache
-#           key: ${{ runner.os }}-sonar
-#           restore-keys: ${{ runner.os }}-sonar
+    
+      - name: Cache SonarQube packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
           
-#       - name: Cache Maven packages
-#         uses: actions/cache@v3
-#         with:
-#           path: ~/.m2
-#           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-#           restore-keys: ${{ runner.os }}-m2
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
           
-#       - name: Analyse with SonarQube
-#         env:
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-#         run: >
-#             mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
-#             -Dsonar.organization=hassanonsori
-#             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
-#             -Dsonar.login=$SONAR_TOKEN
+      - name: Analyse with SonarQube
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: >
+            mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.organization=hassanonsori
+            -Dsonar.projectKey=HassanOnsori_TimerStopwatch
+            -Dsonar.login=$SONAR_TOKEN
             
