--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -1,10 +1,14 @@
 ## This workflow will trigger on every push or pull request to the main branch. It will run on the ubuntu-latest environment and perform the following steps:
-# 1. Check out the code from the repository.
-# 2. Set up Java 17 on the runner.
-# 3. Build the project using Maven.
-# 4. Run the unit tests using Maven.
-# 5. Cache the Maven repository to speed up builds.
-# 6. Generate an HTML report of the test results using the JUnit Test Report action.
+# Job1: 
+# Check out the code from the repository.
+# Set up Java 17 on the runner.
+# Build the project using Maven.
+# Job2:
+# Run the unit tests using Maven.
+# Cache the Maven repository to speed up builds.
+# Job3:
+# Code quality analysis with SonarQube
+# Generate an HTML report of the test results using the JUnit Test Report action.
 
 
 name: Build-Test-Analysis
@@ -48,7 +52,10 @@ jobs:
           
       - name: Test with Maven
         run: mvn test
-    
+  job3:
+    runs-on: ubuntu-latest
+    needs: job2
+    steps:
       - name: Cache SonarQube packages
         uses: actions/cache@v3
         with:
