--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -40,15 +40,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
+#       - name: Set up JDK
+#         uses: actions/setup-java@v3
+#         with:
+#           distribution: 'temurin'
+#           java-version: '17'
+#           cache: 'maven'
           
       - name: Test with Maven
         run: mvn test
@@ -56,6 +56,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: job2
     steps:
+    
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Cache SonarQube packages
         uses: actions/cache@v3
         with:
