--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -40,8 +40,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
 #       - name: Set up JDK
 #         uses: actions/setup-java@v3
