--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -43,12 +43,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-#       - name: Set up JDK
-#         uses: actions/setup-java@v3
-#         with:
-#           distribution: 'temurin'
-#           java-version: '17'
-#           cache: 'maven'
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
           
       - name: Test with Maven
         run: mvn test
@@ -59,6 +59,13 @@ jobs:
     
       - name: Checkout
         uses: actions/checkout@v3
+        
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
         
       - name: Cache SonarQube packages
         uses: actions/cache@v3
