--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -1,15 +1,3 @@
-## This workflow will trigger on every push or pull request to the main branch. It will run on the ubuntu-latest environment and perform the following steps:
-# Job1: 
-# Check out the code from the repository.
-# Set up Java 17 on the runner.
-# Build the project using Maven.
-# Job2:
-# Run the unit tests using Maven.
-# Cache the Maven repository to speed up builds.
-# Job3:
-# Code quality analysis with SonarQube
-# Generate an HTML report of the test results using the JUnit Test Report action.
-
 
 name: Build-Test-Analysis
 
@@ -19,8 +7,7 @@ on:
       - main
 
 jobs:
-  job1:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,36 +23,9 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package
-  job2:
-    runs-on: ubuntu-latest
-    needs: job1
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-          
       - name: Test with Maven
         run: mvn test
-  job3:
-    runs-on: ubuntu-latest
-    needs: job2
-    steps:
-    
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
         
       - name: Cache SonarQube packages
         uses: actions/cache@v3
@@ -91,3 +51,4 @@ jobs:
             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
             -Dsonar.login=$SONAR_TOKEN
             
+
