--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -50,5 +50,6 @@ jobs:
             -Dsonar.organization=hassanonsori
             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
             -Dsonar.login=$SONAR_TOKEN
+            -Dsonar.branch.name=main
             
 
