--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -49,7 +49,7 @@ jobs:
             mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.organization=hassanonsori
             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
-            -Dsonar.branch.name=main
+            -Dsonar.branch.name=master
             -Dsonar.login=$SONAR_TOKEN
             
             
