--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -4,7 +4,7 @@ name: Build-Test-Analysis
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -49,7 +49,7 @@ jobs:
             mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.organization=hassanonsori
             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
-            -Dsonar.branch.name=master
+            -Dsonar.branch.name=main
             -Dsonar.login=$SONAR_TOKEN
             
             
