--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -46,7 +46,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: >
-            mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
+            mvn sonar:sonar -Dsonar.branch.name=main
+            -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.organization=hassanonsori
             -Dsonar.projectKey=HassanOnsori_TimerStopwatch
             -Dsonar.login=$SONAR_TOKEN
