--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -42,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
         
       - name: Cache SonarQube packages
         uses: actions/cache@v3
