--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -41,9 +41,10 @@ jobs:
         run: mvn test
         
       - name: Generate Test Report
-        uses: dorny/test-reporter@v3.0.0
+        uses: matti/test-reporter-action@v3.0.0
         with:
-          junit: './target/surefire-reports/*.xml'
+          reporter: junit-test-reporter
+          junit_report_path: ./target/surefire-reports/*.xml
           
       - name: Upload Test Report Artifact
         uses: actions/upload-artifact@v2
