--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -40,13 +40,13 @@ jobs:
       - name: Test with Maven
         run: mvn test
         
-      - name: Generate HTML report
-        uses: EnricoMi/junit2html@v2.0.1
+      - name: Generate Test Report
+        uses: mikepenz/action-junit-report@v3
         with:
-          srcdir: './target/surefire-reports'
-          outdir: './junit-html-report'
+          report_dir: target/surefire-reports
+          
       - name: Upload Test Report Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: test-report
           path: junit-html-report
