--- a/.github/workflows/build-test-analysis.yml
+++ b/.github/workflows/build-test-analysis.yml
@@ -4,9 +4,10 @@
 # Set up Java 17 on the runner.
 # Build the project using Maven.
 # Run the unit tests using Maven.
-# Cache the Maven repository to speed up builds.
 # Job2:
-# Code quality analysis with SonarQube
+# Check out the code from the repository.
+# Set up Java 17 on the runner.
+# Build and code quality analysis with SonarQube
 
 
 
@@ -54,7 +55,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'maven'
-          
+      
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
       - name: Analyse with SonarQube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
