--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -13,17 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
         java-version: '17'
-
+        distribution: 'temurin'
+        cache: maven
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn -B package --file pom.xml
 
     - name: Check code style with Checkstyle
       run: mvn checkstyle:checkstyle
