--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,7 +59,7 @@ jobs:
         # queries: security-extended,security-and-quality
 
     - name: Set up JDK 21 
-    - uses: actions/setup-java@v4
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin' 
         java-version: '21'
